--- a/TrainingPerformanceGraphs.vcxproj
+++ b/TrainingPerformanceGraphs.vcxproj
@@ -103,6 +103,8 @@
     <ClCompile Include="IMGUI\imgui_stdlib.cpp" />
     <ClCompile Include="imgui\imgui_timeline.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="IMGUI\implot.cpp" />
+    <ClCompile Include="IMGUI\implot_demo.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -123,6 +125,7 @@
     <ClInclude Include="imgui\imgui_searchablecombo.h" />
     <ClInclude Include="IMGUI\imgui_stdlib.h" />
     <ClInclude Include="imgui\imgui_timeline.h" />
+    <ClInclude Include="IMGUI\implot.h" />
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
